objects/UPC_Site__c.object
<CustomObject>
    <description>Object created by Nexell to manage UPC Sites.</description>
    <fields>
        <fullName>HFC_Suitability__c</fullName>
        <label>HFC Suitability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
                <value>
                    <fullName>T4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <description>Created by Nexell to manage automated site names</description>
        <formula>IF(NOT(ISBLANK(UPC_Account__c )),
IF( NOT(ISBLANK(UPC_ADBASE_Address__c)), 
IF( LEN(UPC_Account__r.Name) &gt; 50,

HYPERLINK(&quot;/&quot; &amp; Id, 
(LEFT(UPC_Account__r.Name, 50)&amp;&quot;...&quot;&amp;&quot; - &quot;&amp;
 UPC_ADBASE_Address__r.UPC_Address_Formula__c 
)
, &quot;_self&quot; ),

HYPERLINK(&quot;/&quot; &amp; Id, 
(LEFT(UPC_Account__r.Name, 50)&amp;&quot; - &quot;&amp;
 UPC_ADBASE_Address__r.UPC_Address_Formula__c 
)
, &quot;_self&quot; )),
IF( LEN(UPC_Account__r.Name) &gt; 50,

HYPERLINK(&quot;/&quot; &amp; Id, 
(LEFT(UPC_Account__r.Name, 50)&amp;&quot;...&quot;&amp;&quot; - &quot;&amp;UPC_Note__c&amp;&quot; - &quot;&amp; TEXT(UPC_Geolocation__Latitude__s)&amp;&quot;, &quot;&amp; TEXT(UPC_Geolocation__Longitude__s)
)
, &quot;_self&quot; ),

HYPERLINK(&quot;/&quot; &amp; Id, 
(LEFT(UPC_Account__r.Name, 50)&amp;&quot; - &quot;&amp; UPC_Note__c&amp;&quot; - &quot;&amp;  TEXT(UPC_Geolocation__Latitude__s)&amp;&quot;, &quot;&amp; TEXT(UPC_Geolocation__Longitude__s) 
)
, &quot;_self&quot; ))),

IF( NOT(ISBLANK(UPC_ADBASE_Address__c)), 
IF( LEN(UPC_Lead__r.Company) &gt; 50,

HYPERLINK(&quot;/&quot; &amp; Id, 
(LEFT(UPC_Lead__r.Company, 50)&amp;&quot;...&quot;&amp;&quot; - &quot;&amp;
 UPC_ADBASE_Address__r.UPC_Address_Formula__c 
)
, &quot;_self&quot; ),

HYPERLINK(&quot;/&quot; &amp; Id, 
(LEFT(UPC_Lead__r.Company, 50)&amp;&quot; - &quot;&amp;
 UPC_ADBASE_Address__r.UPC_Address_Formula__c 
)
, &quot;_self&quot; )),
IF( LEN(UPC_Lead__r.Company) &gt; 50,

HYPERLINK(&quot;/&quot; &amp; Id, 
(LEFT(UPC_Lead__r.Company, 50)&amp;&quot;...&quot;&amp;&quot; - &quot;&amp;UPC_Note__c&amp;&quot; - &quot;&amp; TEXT(UPC_Geolocation__Latitude__s)&amp;&quot;, &quot;&amp; TEXT(UPC_Geolocation__Longitude__s)
)
, &quot;_self&quot; ),

HYPERLINK(&quot;/&quot; &amp; Id, 
(LEFT(UPC_Lead__r.Company, 50)&amp;&quot; - &quot;&amp; UPC_Note__c&amp;&quot; - &quot;&amp;  TEXT(UPC_Geolocation__Latitude__s)&amp;&quot;, &quot;&amp; TEXT(UPC_Geolocation__Longitude__s) 
)
, &quot;_self&quot; )))
)</formula>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ADBASE_Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Address</label>
        <referenceTo>UPC_ADBASE__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Address_Details__c</fullName>
        <formula>IF( ISBLANK(UPC_ADBASE_Address__c),&quot;No Address Given&quot;,
 UPC_ADBASE_Address__r.UPC_Address_Details__c )</formula>
        <label>UPC Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS_Alert__c</fullName>
        <formula>IF(  CONTAINS($Profile.Name, &quot;Partner&quot;),

CASE( UPC_BBCS_Rollup__c ,
&apos;Green&apos;,IMAGE(&apos;/Partner/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20),
&apos;Orange&apos;,IMAGE(&apos;/Partner/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20), 
&apos;Red&apos;,IMAGE(&apos;/Partner/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
&apos;Gray&apos;,IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20),
IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20)
),
CASE( UPC_BBCS_Rollup__c ,
&apos;Green&apos;,IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20),
&apos;Orange&apos;,IMAGE(&apos;/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20), 
&apos;Red&apos;,IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
&apos;Gray&apos;,IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20),
IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20)
)
)</formula>
        <label>BBCS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS_Rollup__c</fullName>
        <label>BBCS Rollup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Gray</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_BUILDINGCOORDINATE_Y__c</fullName>
        <formula>UPC_ADBASE_Address__r.UPC_BUILDINGCOORDINATEY__c</formula>
        <label>BUILDING COORDINATE Y</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_BUILDING_COORDINATE_X__c</fullName>
        <formula>UPC_ADBASE_Address__r.UPC_BUILDINGCOORDINATEX__c</formula>
        <label>BUILDING COORDINATE X</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Basic_Address__c</fullName>
        <formula>IF( ISBLANK(UPC_ADBASE_Address__c),&quot;No Address Given&quot;,
 UPC_ADBASE_Address__r.UPC_Address_Formula__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPC Basic Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Building_ID__c</fullName>
        <description>Created by Nexell to show the primary address Building ID</description>
        <formula>UPC_ADBASE_Address__r.UPC_ID_BUILDING__c</formula>
        <label>Building ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Building_ID_not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Building ID not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Alert__c</fullName>
        <formula>IF(  CONTAINS($Profile.Name, &quot;Partner&quot;),

CASE(  UPC_FTTH_Rollup__c  ,
&apos;Green&apos;,IMAGE(&apos;/Partner/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20),
&apos;Orange&apos;,IMAGE(&apos;/Partner/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20), 
&apos;Red&apos;,IMAGE(&apos;/Partner/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
&apos;Gray&apos;,IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20),
IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20)
),

CASE(  UPC_FTTH_Rollup__c  ,
&apos;Green&apos;,IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20),
&apos;Orange&apos;,IMAGE(&apos;/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20), 
&apos;Red&apos;,IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
&apos;Gray&apos;,IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20),
IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20)
)
)</formula>
        <label>FTTH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Rollup__c</fullName>
        <description>Created by Nexell to be used as intermediary for the FTTH alert icon.</description>
        <label>FTTH Rollup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Gray</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_FTTH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FTTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Alert__c</fullName>
        <formula>IF(  CONTAINS($Profile.Name, &quot;Partner&quot;),
CASE( UPC_HFC_Rollup__c ,
&apos;Green&apos;,IMAGE(&apos;/Partner/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20),
&apos;Orange&apos;,IMAGE(&apos;/Partner/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20), 
&apos;Red&apos;,IMAGE(&apos;/Partner/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
&apos;Gray&apos;,IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20),
IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20)
),
CASE( UPC_HFC_Rollup__c ,
&apos;Green&apos;,IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20),
&apos;Orange&apos;,IMAGE(&apos;/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20), 
&apos;Red&apos;,IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
&apos;Gray&apos;,IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20),
IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20)
)
)</formula>
        <label>HFC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Rollup__c</fullName>
        <description>Created by Nexell to be used as intermidiary for the HFC alert icon.</description>
        <label>HFC Rollup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Gray</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_HFC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HFC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_HelperField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HelperField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_HelperOppId__c</fullName>
        <label>HelperOppId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Footprint_Check__c</fullName>
        <label>Last Footprint Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Taifun_Reconciliation__c</fullName>
        <label>Last Taifun Reconciliation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Latitude__c</fullName>
        <formula>TEXT(UPC_ADBASE_Address__r.UPC_Geolocation__Latitude__s)</formula>
        <label>Latitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Longitude__c</fullName>
        <formula>tEXT(UPC_ADBASE_Address__r.UPC_Geolocation__Longitude__s)</formula>
        <label>Longitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_MapCity__c</fullName>
        <formula>UPC_ADBASE_Address__r.UPC_LOCATIONNAME1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPC_MapCity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_MapPostCode__c</fullName>
        <formula>UPC_ADBASE_Address__r.UPC_POSTCODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPC_MapPostCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_MapStreet__c</fullName>
        <formula>UPC_ADBASE_Address__r.UPC_STREETNAME1__c + IF(ISBLANK(UPC_ADBASE_Address__r.UPC_BUILDING_NUMBER__c),&apos;&apos;, &apos; &apos; +  UPC_ADBASE_Address__r.UPC_BUILDING_NUMBER__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPC_MapStreet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_No_SOHO_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Solution Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Note__c</fullName>
        <description>Created by Nexell and used to note information when the address is empty.</description>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_OS_ID__c</fullName>
        <description>Created by Nexell and used to show the Primary Address OS ID</description>
        <formula>UPC_ADBASE_Address__r.UPC_OS_ID__c</formula>
        <label>OS ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Primary_Address_Record_Type__c</fullName>
        <formula>UPC_ADBASE_Address__r.RecordType.Name</formula>
        <label>Primary Address Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Name_Searchable__c</fullName>
        <description>Created by Nexell to make Site Name Searchable.</description>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Number__c</fullName>
        <label>Site Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Status__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <description>Created by Nexell. Used to control the status of a site.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Soho_Service_Alert__c</fullName>
        <formula>IF(UPC_No_SOHO_Service__c,
IMAGE(&apos;/resource/1536831026000/Alert_Icon&apos;,&apos;No Soho&apos;,20,20),
&quot;&quot;)</formula>
        <label>Only Solution Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Synced_Taifun_Address__c</fullName>
        <label>Taifun Address Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Alert__c</fullName>
        <formula>IF(  CONTAINS($Profile.Name, &quot;Partner&quot;),

CASE( UPC_ULL_CU_Rollup__c ,
&apos;Green&apos;,IMAGE(&apos;/Partner/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20),
&apos;Orange&apos;,IMAGE(&apos;/Partner/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20), 
&apos;Red&apos;,IMAGE(&apos;/Partner/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
&apos;Gray&apos;,IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20),
IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20)
),
CASE( UPC_ULL_CU_Rollup__c ,
&apos;Green&apos;,IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20),
&apos;Orange&apos;,IMAGE(&apos;/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20), 
&apos;Red&apos;,IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
&apos;Gray&apos;,IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20),
IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20)
)
)</formula>
        <label>ULL CU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Rollup__c</fullName>
        <label>ULL CU Rollup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Gray</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPC_Basic_Address__c</columns>
        <columns>UPC_Address_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>Site ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_or_Lead_are_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(  UPC_Account__c  ), ISBLANK( UPC_Lead__c ))</errorConditionFormula>
        <errorMessage>A site can only be created with a Lead or an Account. Please make sure to fulfill one of them.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_or_Geotag_are_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISBLANK( UPC_ADBASE_Address__c ),
    OR(   ISBLANK(UPC_Geolocation__Latitude__s),
ISBLANK(UPC_Geolocation__Longitude__s )))</errorConditionFormula>
        <errorMessage>A site can only be created with an Address or a Geotag. Please make sure to fulfill one of them.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_SOHO_check_when_FTTH_and_HFC_no_check</fullName>
        <active>true</active>
        <description>No Soho Service can just be checked if FTTH and HFC are not checked</description>
        <errorConditionFormula>AND(OR(UPC_FTTH__c, UPC_HFC__c), UPC_No_SOHO_Service__c )</errorConditionFormula>
        <errorDisplayField>UPC_No_SOHO_Service__c</errorDisplayField>
        <errorMessage>No Soho Service can only be checked if FTTH and FHC are not Checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Note_is_Mandatory_when_Address_is_empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK( UPC_ADBASE_Address__c ),
ISBLANK( UPC_Note__c ))</errorConditionFormula>
        <errorDisplayField>UPC_ADBASE_Address__c</errorDisplayField>
        <errorMessage>Please insert a note when the address is not fulfilled.</errorMessage>
    </validationRules>
</CustomObject>